Fix dark mode color

--- a/src/themes/theme-new-dark.scss
+++ b/src/themes/theme-new-dark.scss
@@ -580,7 +580,7 @@ $module-nav-item-selected-text-color: $ids-color-palette-slate-10;
 // Module Nav Switcher (Role Dropdown + Button)
 $module-nav-switcher-dropdown-item-focus-bg-color: $ids-color-palette-slate-80;
 $module-nav-switcher-dropdown-item-text-color: $ids-color-palette-slate-20;
-$module-nav-switcher-dropdown-background-color: $ids-color-palette-white;
+$module-nav-switcher-dropdown-background-color: $ids-color-palette-slate-100;
 
 // Module Nav Search (Input Field)
 $module-nav-search-input-text-color: $ids-color-palette-slate-10;
